--- a/src/main/resources/templates/administration/topics/topics.html
+++ b/src/main/resources/templates/administration/topics/topics.html
@@ -26,9 +26,9 @@
             <tr>
                 <th>topic ID</th>
                 <th>korTheme</th>
-                <th>Date</th>
-                <th>Day</th>
-                <th>numOfParticipant</th>
+                <th>Study Date</th>
+                <th>Study Day</th>
+                <th>Number of Participant</th>
             </tr>
             </thead>
             <tbody>
