fix: 2021.11.11 required(9. expression을 다채우지 않더라도 등록할 수 있도록 - 5개 못채울 수도 있으니)

--- a/src/main/resources/templates/administration/topics/addTopicForm.html
+++ b/src/main/resources/templates/administration/topics/addTopicForm.html
@@ -125,121 +125,121 @@
                 <tr>
                     <td>kor-word2</td>
                     <td>
-                        <input type="text" id="expressionWord3" name="expressionWord3" required>
+                        <input type="text" id="expressionWord3" name="expressionWord3">
                     </td>
                     <td>
-                        <textarea id="expressionMeaning3" name="expressionMeaning3" required></textarea>
+                        <textarea id="expressionMeaning3" name="expressionMeaning3"></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample3" name="expressionExample3" required></textarea>
+                        <textarea id="expressionExample3" name="expressionExample3"></textarea>
                     </td>
                     <td>
-                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg"/>
                     </td>
                 </tr>
                 <tr>
                     <td>eng-word2</td>
                     <td>
-                        <input type="text" id="expressionWord4" name="expressionWord4" required>
+                        <input type="text" id="expressionWord4" name="expressionWord4">
                     </td>
                     <td>
-                        <textarea id="expressionMeaning4" name="expressionMeaning4" required></textarea>
+                        <textarea id="expressionMeaning4" name="expressionMeaning4"></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample4" name="expressionExample4" required></textarea>
+                        <textarea id="expressionExample4" name="expressionExample4"></textarea>
                     </td>
                     <td>
-                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" />
                     </td>
                 </tr>
                 <tr>
                     <td>kor-word3</td>
                     <td>
-                        <input type="text" id="expressionWord5" name="expressionWord5" required>
+                        <input type="text" id="expressionWord5" name="expressionWord5">
                     </td>
                     <td>
-                        <textarea id="expressionMeaning5" name="expressionMeaning5" required></textarea>
+                        <textarea id="expressionMeaning5" name="expressionMeaning5"></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample5" name="expressionExample5" required></textarea>
+                        <textarea id="expressionExample5" name="expressionExample5"></textarea>
                     </td>
                     <td>
-                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" />
                     </td>
                 </tr>
                 <tr>
                     <td>eng-word3</td>
                     <td>
-                        <input type="text" id="expressionWord6" name="expressionWord6" required>
+                        <input type="text" id="expressionWord6" name="expressionWord6">
                     </td>
                     <td>
-                        <textarea id="expressionMeaning6" name="expressionMeaning6" required></textarea>
+                        <textarea id="expressionMeaning6" name="expressionMeaning6"></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample6" name="expressionExample6" required></textarea>
+                        <textarea id="expressionExample6" name="expressionExample6"></textarea>
                     </td>
                     <td>
-                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" />
                     </td>
                 </tr>
                 <tr>
                     <td>kor-word4</td>
                     <td>
-                        <input type="text" id="expressionWord7" name="expressionWord7" required>
+                        <input type="text" id="expressionWord7" name="expressionWord7">
                     </td>
                     <td>
-                        <textarea id="expressionMeaning7" name="expressionMeaning7" required></textarea>
+                        <textarea id="expressionMeaning7" name="expressionMeaning7"></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample7" name="expressionExample7" required></textarea>
+                        <textarea id="expressionExample7" name="expressionExample7"></textarea>
                     </td>
                     <td>
-                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg"/>
                     </td>
                 </tr>
                 <tr>
                     <td>eng-word4</td>
                     <td>
-                        <input type="text" id="expressionWord8" name="expressionWord8" required>
+                        <input type="text" id="expressionWord8" name="expressionWord8">
                     </td>
                     <td>
-                        <textarea id="expressionMeaning8" name="expressionMeaning8" required></textarea>
+                        <textarea id="expressionMeaning8" name="expressionMeaning8"></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample8" name="expressionExample8" required></textarea>
+                        <textarea id="expressionExample8" name="expressionExample8"></textarea>
                     </td>
                     <td>
-                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" />
                     </td>
                 </tr>
                 <tr>
                     <td>kor-word5</td>
                     <td>
-                        <input type="text" id="expressionWord9" name="expressionWord9" required>
+                        <input type="text" id="expressionWord9" name="expressionWord9">
                     </td>
                     <td>
-                        <textarea id="expressionMeaning9" name="expressionMeaning9" required></textarea>
+                        <textarea id="expressionMeaning9" name="expressionMeaning9"></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample9" name="expressionExample9" required></textarea>
+                        <textarea id="expressionExample9" name="expressionExample9"></textarea>
                     </td>
                     <td>
-                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg"/>
                     </td>
                 </tr>
                 <tr>
                     <td>eng-word5</td>
                     <td>
-                        <input type="text" id="expressionWord10" name="expressionWord10" required>
+                        <input type="text" id="expressionWord10" name="expressionWord10">
                     </td>
                     <td>
-                        <textarea id="expressionMeaning10" name="expressionMeaning10" required></textarea>
+                        <textarea id="expressionMeaning10" name="expressionMeaning10"></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample10" name="expressionExample10" required></textarea>
+                        <textarea id="expressionExample10" name="expressionExample10"></textarea>
                     </td>
                     <td>
-                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg"/>
                     </td>
                 </tr>
             </table>
